--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
+        if [ -f requirements.txt ]; then
+          echo "requirements.txt found. Installing dependencies..."
+          pip install -r requirements.txt
+        else
+          echo "requirements.txt not found. Skipping dependency installation."
+        fi
     - name: Run app (for demo)
       run: |
         python app.py
